--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
           POSTGRES_USER: django_user
           POSTGRES_PASSWORD: django_password
           POSTGRES_DB: django_db
+          DJANGO_ALLOWED_HOSTS: 127.0.0.1,localhost
         ports:
           - 5432:5432
         # Эта конструкция описывает проверку готовности сервиса postgres
